--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -31,7 +31,7 @@ set(NextSimDetectorSources nDetMaterials.cc nDetMaterialsMessenger.cc nDetConstr
                            CERNFloor.cc
                            Polyhedron.cc IS530_Chamber.cc IS530_Plastic.cc Tape.cc
                            CloverQuadBuchDetector.cc CloverQuadDetector.cc CloverSingleBuchDetector.cc CloverSingleDetector.cc
-        IS659VandleFrame.cc IS659PolygonFrame.cc IS659Cube.cc
+        IS659VandleFrame.cc IS659AluStuff.cc IS659Cube.cc IS659Clovers.cc
                            )
 set(NextSimGeneratorSources nDetParticleSource.cc nDetParticleSourceMessenger.cc)
 set(NextSimPeripheralSources optionHandler.cc termColors.cc)
